@@ -510,6 +510,7 @@ SDK version 4.9
 #define sTypeAvantek 0x0E
 #define sTypeIT 0x0F
 #define sTypeMDREMOTE108 0x10
+#define sTypeKangtai 0x11
 
 #define light5_sOff 0x0
 #define light5_sOn 0x1
