@@ -254,9 +254,10 @@
 						<option value="100">ByronSX</option>
 						<option value="101">Harrison Curtain</option>
 						<option value="102">RFY</option>
+						<option value="107">RFY-2</option>
+						<option value="105">ASA</option>
 						<option value="103">Meiantech Security</option>
 						<option value="104">HE105</option>
-						<option value="105">ASA</option>
 						<option value="205">Blinds T5 Media Mount</option>
 						<option value="206">Blinds T6 DC106</option>
 						<option value="207">Blinds T7 Forest</option>
