@@ -6,6 +6,7 @@ Version 3.xxxx (December xth 2016)
 - Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
 - Changed: Minimized On/Off/Script execution time
 - Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
+- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
 - Implemented: Blinds T1 till T13 new supports the Stop button
 - Implemented: Devices, Log icon for Blinds
 - Implemented: Blockly/Lua Set SetPoint option
@@ -13,7 +14,8 @@ Version 3.xxxx (December xth 2016)
 - Implemented: Netatmo Home Coach support
 - Implemented: Notification for Dummy Soil/Moisture sensor
 - Implemented: Option to replace an Meter device
-- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
+- Implemented: RFXtrx RFY2 protocol implemented
+- Implemented: RFXtrx Kangtai / Cotech implemented
 
 Version 3.5878 (November 10th 2016)
 - Fixes and various improvements
